...
    private var estimatedProgressObservation: NSKeyValueObservation?
    
    //MARK: - Properties
    private var webView: WKWebView = {
        var webView = WKWebView()
        webView.translatesAutoresizingMaskIntoConstraints = false
        webView.accessibilityIdentifier = "UnsplashWebView"
        
        return webView
    }()
    
    private var progressView: UIProgressView = {
        var progressview = UIProgressView()
        progressview.translatesAutoresizingMaskIntoConstraints = false
        progressview.progressTintColor = .ypBlack
        return progressview
    }()
    
    private let backButton: UIButton = {
        let button = UIButton()
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setImage(UIImage(named: "chevronBlack.backward"), for: .normal)
        
        return button
    }()
...
