...
        button.setTitle("Войти", for: .normal)
        button.titleLabel?.font = UIFont.boldSystemFont(ofSize: 17)
        button.setTitleColor(.ypBlack, for: .normal)
        button.backgroundColor = .ypWhite
        button.clipsToBounds = true
        button.layer.cornerRadius = 16
        button.accessibilityIdentifier = "Authenticate"
        
        return button
    }()
    
    private func addSubviews() {
        view.addSubview(imageView)
...
