...
        assert(Thread.isMainThread)
        lastTask?.cancel()
        
        var request: URLRequest
        
        if isLike {
            request = URLRequest.makeRequest(path: "photos/\(photoId)/like", httpMethod: "POST")
            request.setValue("Bearer \(OAuth2TokenStorage().token!)", forHTTPHeaderField: "Authorization")
        } else {
            request = URLRequest.makeRequest(path: "photos/\(photoId)/like", httpMethod: "DELETE")
            request.setValue("Bearer \(OAuth2TokenStorage().token!)", forHTTPHeaderField: "Authorization")
        }
        
...
